--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMV6ca8DLPC/UMaM3Y1hF9X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,17 +22,133 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jessepoljak/Project_2_Credit_Default/blob/Jesse/Untitled0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jessepoljak/Project_2_Credit_Default/blob/Erik/Untitled0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "JuhY18-PLASU"
+        "id": "JuhY18-PLASU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d5c518be-2918-47f3-b0fb-ee91daa77848"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting ucimlrepo\n",
+            "  Downloading ucimlrepo-0.0.7-py3-none-any.whl.metadata (5.5 kB)\n",
+            "Requirement already satisfied: pandas>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from ucimlrepo) (2.2.2)\n",
+            "Requirement already satisfied: certifi>=2020.12.5 in /usr/local/lib/python3.10/dist-packages (from ucimlrepo) (2024.8.30)\n",
+            "Requirement already satisfied: numpy>=1.22.4 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.0.0->ucimlrepo) (1.26.4)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.0.0->ucimlrepo) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.0.0->ucimlrepo) (2024.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.0.0->ucimlrepo) (2024.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.2->pandas>=1.0.0->ucimlrepo) (1.16.0)\n",
+            "Downloading ucimlrepo-0.0.7-py3-none-any.whl (8.0 kB)\n",
+            "Installing collected packages: ucimlrepo\n",
+            "Successfully installed ucimlrepo-0.0.7\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Import libs\n",
+        "!pip install ucimlrepo\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import depend\n",
+        "from ucimlrepo import fetch_ucirepo"
+      ],
+      "metadata": {
+        "id": "cFC6cDfR2q6y"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# fetch dataset\n",
+        "default_of_credit_card_clients = fetch_ucirepo(id=350)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XATE9AYX2y8i",
+        "outputId": "93603852-d88b-438c-f06c-8f8eff74cffd"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'uci_id': 350, 'name': 'Default of Credit Card Clients', 'repository_url': 'https://archive.ics.uci.edu/dataset/350/default+of+credit+card+clients', 'data_url': 'https://archive.ics.uci.edu/static/public/350/data.csv', 'abstract': \"This research aimed at the case of customers' default payments in Taiwan and compares the predictive accuracy of probability of default among six data mining methods.\", 'area': 'Business', 'tasks': ['Classification'], 'characteristics': ['Multivariate'], 'num_instances': 30000, 'num_features': 23, 'feature_types': ['Integer', 'Real'], 'demographics': ['Sex', 'Education Level', 'Marital Status', 'Age'], 'target_col': ['Y'], 'index_col': ['ID'], 'has_missing_values': 'no', 'missing_values_symbol': None, 'year_of_dataset_creation': 2009, 'last_updated': 'Fri Mar 29 2024', 'dataset_doi': '10.24432/C55S3H', 'creators': ['I-Cheng Yeh'], 'intro_paper': {'ID': 365, 'type': 'NATIVE', 'title': 'The comparisons of data mining techniques for the predictive accuracy of probability of default of credit card clients', 'authors': 'I. Yeh, Che-hui Lien', 'venue': 'Expert systems with applications', 'year': 2009, 'journal': None, 'DOI': '10.1016/j.eswa.2007.12.020', 'URL': 'https://www.semanticscholar.org/paper/1cacac4f0ea9fdff3cd88c151c94115a9fddcf33', 'sha': None, 'corpus': None, 'arxiv': None, 'mag': None, 'acl': None, 'pmid': None, 'pmcid': None}, 'additional_info': {'summary': \"This research aimed at the case of customers' default payments in Taiwan and compares the predictive accuracy of probability of default among six data mining methods. From the perspective of risk management, the result of predictive accuracy of the estimated probability of default will be more valuable than the binary result of classification - credible or not credible clients. Because the real probability of default is unknown, this study presented the novel Sorting Smoothing Method to estimate the real probability of default. With the real probability of default as the response variable (Y), and the predictive probability of default as the independent variable (X), the simple linear regression result (Y = A + BX) shows that the forecasting model produced by artificial neural network has the highest coefficient of determination; its regression intercept (A) is close to zero, and regression coefficient (B) to one. Therefore, among the six data mining techniques, artificial neural network is the only one that can accurately estimate the real probability of default.\", 'purpose': None, 'funded_by': None, 'instances_represent': None, 'recommended_data_splits': None, 'sensitive_data': None, 'preprocessing_description': None, 'variable_info': 'This research employed a binary variable, default payment (Yes = 1, No = 0), as the response variable. This study reviewed the literature and used the following 23 variables as explanatory variables:\\r\\nX1: Amount of the given credit (NT dollar): it includes both the individual consumer credit and his/her family (supplementary) credit.\\r\\nX2: Gender (1 = male; 2 = female).\\r\\nX3: Education (1 = graduate school; 2 = university; 3 = high school; 4 = others).\\r\\nX4: Marital status (1 = married; 2 = single; 3 = others).\\r\\nX5: Age (year).\\r\\nX6 - X11: History of past payment. We tracked the past monthly payment records (from April to September, 2005) as follows: X6 = the repayment status in September, 2005; X7 = the repayment status in August, 2005; . . .;X11 = the repayment status in April, 2005. The measurement scale for the repayment status is: -1 = pay duly; 1 = payment delay for one month; 2 = payment delay for two months; . . .; 8 = payment delay for eight months; 9 = payment delay for nine months and above.\\r\\nX12-X17: Amount of bill statement (NT dollar). X12 = amount of bill statement in September, 2005; X13 = amount of bill statement in August, 2005; . . .; X17 = amount of bill statement in April, 2005. \\r\\nX18-X23: Amount of previous payment (NT dollar). X18 = amount paid in September, 2005; X19 = amount paid in August, 2005; . . .;X23 = amount paid in April, 2005.\\r\\n', 'citation': None}}\n",
+            "   name     role     type      demographic                 description units  \\\n",
+            "0    ID       ID  Integer             None                        None  None   \n",
+            "1    X1  Feature  Integer             None                   LIMIT_BAL  None   \n",
+            "2    X2  Feature  Integer              Sex                         SEX  None   \n",
+            "3    X3  Feature  Integer  Education Level                   EDUCATION  None   \n",
+            "4    X4  Feature  Integer   Marital Status                    MARRIAGE  None   \n",
+            "5    X5  Feature  Integer              Age                         AGE  None   \n",
+            "6    X6  Feature  Integer             None                       PAY_0  None   \n",
+            "7    X7  Feature  Integer             None                       PAY_2  None   \n",
+            "8    X8  Feature  Integer             None                       PAY_3  None   \n",
+            "9    X9  Feature  Integer             None                       PAY_4  None   \n",
+            "10  X10  Feature  Integer             None                       PAY_5  None   \n",
+            "11  X11  Feature  Integer             None                       PAY_6  None   \n",
+            "12  X12  Feature  Integer             None                   BILL_AMT1  None   \n",
+            "13  X13  Feature  Integer             None                   BILL_AMT2  None   \n",
+            "14  X14  Feature  Integer             None                   BILL_AMT3  None   \n",
+            "15  X15  Feature  Integer             None                   BILL_AMT4  None   \n",
+            "16  X16  Feature  Integer             None                   BILL_AMT5  None   \n",
+            "17  X17  Feature  Integer             None                   BILL_AMT6  None   \n",
+            "18  X18  Feature  Integer             None                    PAY_AMT1  None   \n",
+            "19  X19  Feature  Integer             None                    PAY_AMT2  None   \n",
+            "20  X20  Feature  Integer             None                    PAY_AMT3  None   \n",
+            "21  X21  Feature  Integer             None                    PAY_AMT4  None   \n",
+            "22  X22  Feature  Integer             None                    PAY_AMT5  None   \n",
+            "23  X23  Feature  Integer             None                    PAY_AMT6  None   \n",
+            "24    Y   Target   Binary             None  default payment next month  None   \n",
+            "\n",
+            "   missing_values  \n",
+            "0              no  \n",
+            "1              no  \n",
+            "2              no  \n",
+            "3              no  \n",
+            "4              no  \n",
+            "5              no  \n",
+            "6              no  \n",
+            "7              no  \n",
+            "8              no  \n",
+            "9              no  \n",
+            "10             no  \n",
+            "11             no  \n",
+            "12             no  \n",
+            "13             no  \n",
+            "14             no  \n",
+            "15             no  \n",
+            "16             no  \n",
+            "17             no  \n",
+            "18             no  \n",
+            "19             no  \n",
+            "20             no  \n",
+            "21             no  \n",
+            "22             no  \n",
+            "23             no  \n",
+            "24             no  \n"
+          ]
+        }
+      ]
     }
   ]
 }
