Added variance check for RFC model

--- a/Project2_Loans.ipynb
+++ b/Project2_Loans.ipynb
@@ -73,10 +73,11 @@
         "# Import dependencies\n",
         "from ucimlrepo import fetch_ucirepo\n",
         "import pandas as pd\n",
+        "import numpy as np\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.metrics import accuracy_score\n",
-        "import matplotlib.pyplot as plt\n",
+        "from sklearn.model_selection import cross_val_score\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from imblearn.over_sampling import SMOTE\n",
         "from sklearn.metrics import classification_report\n",
@@ -87,7 +88,7 @@
       "metadata": {
         "id": "cFC6cDfR2q6y"
       },
-      "execution_count": 78,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -1007,8 +1008,6 @@
         "vif_data[\"Variable\"] = X.columns\n",
         "\n",
         "# Calculate VIF for each feature in the dataset\n",
-        "# The variance_inflation_factor function requires the feature matrix (X.values)\n",
-        "# and the index of the feature for which VIF is being calculated\n",
         "vif_data[\"VIF\"] = [variance_inflation_factor(X.values, i) for i in range(X.shape[1])]\n",
         "\n",
         "print(vif_data)"
@@ -1450,18 +1449,16 @@
         "vif_data[\"Variable\"] = X.columns\n",
         "\n",
         "# Calculate VIF for each feature in the dataset\n",
-        "# The variance_inflation_factor function requires the feature matrix (X.values)\n",
-        "# and the index of the feature for which VIF is being calculated\n",
         "vif_data[\"VIF\"] = [variance_inflation_factor(X.values, i) for i in range(X.shape[1])]\n",
         "\n",
         "print(vif_data)"
       ],
       "metadata": {
-        "id": "qkZ6VXnX3W2O",
-        "outputId": "8831ff06-d8c0-40cd-aeeb-375ba2a92805",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qkZ6VXnX3W2O",
+        "outputId": "8831ff06-d8c0-40cd-aeeb-375ba2a92805"
       },
       "execution_count": 30,
       "outputs": [
@@ -1492,17 +1489,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# Drop the const feature.\n",
+        "# Drop the const feature\n",
         "X.drop(columns = ['const'], axis = 1, inplace =True)\n",
         "X.head()"
       ],
       "metadata": {
-        "id": "cY713xku4LCE",
-        "outputId": "cfdfa9c5-71f5-41e0-e8a9-d33f6bd4848a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "cY713xku4LCE",
+        "outputId": "cfdfa9c5-71f5-41e0-e8a9-d33f6bd4848a"
       },
       "execution_count": 31,
       "outputs": [
@@ -1967,12 +1964,12 @@
         "                'PAY_AMT6',]\n",
         "# Initialize scaler\n",
         "scaler = StandardScaler()\n",
-        "# Scale the demographic features\n",
+        "# Scale the features on training data\n",
         "X_train[data_to_scale] = scaler.fit_transform(X_train[data_to_scale])\n",
         "\n",
         "# Initialize scaler\n",
         "scaler = StandardScaler()\n",
-        "# Scale the demographic features\n",
+        "# Scale the features on test data\n",
         "X_test[data_to_scale] = scaler.fit_transform(X_test[data_to_scale])"
       ],
       "metadata": {
@@ -2050,6 +2047,33 @@
           },
           "metadata": {},
           "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check Variance score for the random forest model\n",
+        "scores = cross_val_score(RandomForestClassifier(), X_train_res, y_train_res, cv=5, scoring='neg_mean_squared_error')\n",
+        "\n",
+        "variance = np.var(-scores)\n",
+        "print(variance)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iCzGZs99T1Hs",
+        "outputId": "6ce9328b-085f-4738-a20e-085c6a1fba7b"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.0010732003141995885\n"
+          ]
         }
       ]
     },
@@ -2526,7 +2550,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Hyperparam Tuning using RandomizedSearchCV\n",
+        "# Hyperparameter Tuning using RandomizedSearchCV\n",
         "param_grid = {\n",
         "    'n_estimators': [25, 50, 100, 150],\n",
         "    'max_features': ['sqrt', 'log2', None],\n",
@@ -2557,10 +2581,10 @@
       ],
       "metadata": {
         "id": "0xWmuTraNdFI",
-        "outputId": "4f663259-0616-4fd9-bbd8-2a4c386dd187",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4f663259-0616-4fd9-bbd8-2a4c386dd187"
       },
       "execution_count": 58,
       "outputs": [
